--- a/website_frontend/src/components/HeaderImage/HeaderImage.module.css
+++ b/website_frontend/src/components/HeaderImage/HeaderImage.module.css
@@ -14,6 +14,13 @@
   padding-bottom: 10%;
   padding-top: 6%;
 }
+@media only screen and (max-width: 1000px) {
+    .noTitle {
+        padding-bottom: 20%;
+        padding-top: 10%;
+    }
+}
+
 
 .headerImage h2 {
     color: white;
